--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "nodemon --exec ts-node server.ts",
     "ndev": "next dev",
-    "tstart": "ts-node server.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -28,6 +27,7 @@
     "eslint-config-next": "12.3.1",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.17",
+    "postcss-preset-env": "^7.8.2",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
