--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "nodemonConfig": {
     "ignore": [
       "**/tests/**",
-      "*.test.ts"
+      "*.test.ts",
+      "/data.json"
     ],
     "delay": 2500
   },
@@ -22,6 +23,8 @@
     "@tanstack/react-query": "^4.10.3",
     "@types/lodash": "^4.14.186",
     "@types/supertest": "^2.0.12",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "fastify": "^4.7.0",
     "fastify-nextjs": "^7.3.0",
     "iron-session": "^6.2.1",
