--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@fastify/nextjs": "^9.1.1",
+    "@prisma/client": "4.4.0",
     "@tanstack/react-query": "^4.10.3",
     "@types/lodash": "^4.14.186",
     "@types/supertest": "^2.0.12",
@@ -47,6 +48,7 @@
     "postcss-preset-env": "^7.8.2",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.4.0",
     "supertest": "^6.3.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.3",
