--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "fastify-nextjs": "^7.3.0",
     "iron-session": "^6.2.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.6.5",
     "next": "12.3.1",
-    "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -48,7 +48,6 @@
     "postcss-preset-env": "^7.8.2",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.4.0",
     "supertest": "^6.3.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.3",
