--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - ./:/app
       - /app/node_modules
-    env_file:
-      - ./.env
+    depends_on:
+      - mongo
   mongo:
     image: mongo
     environment:
