--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.3",
     "@types/react": "18.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "8.24.0",
+    "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
