--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.24.0",
+    "eslint": "^8.26.0",
     "eslint-config-next": "12.3.1",
+    "eslint-plugin-react": "^7.31.10",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "postcss": "^8.4.17",
