--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "incremental": true,
@@ -25,6 +25,12 @@
     "esm": true,
     "module": "commonjs"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "server.ts", "src/components/TrackableView/trackableContext.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "server.ts",
+    "src/components/TrackableView/trackableContext.jsx"
+  ],
   "exclude": ["node_modules"]
 }
