--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "root": true
+  "root": true,
+  "env": {
+    "node": true
+  }
 }
