--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "migrate": "prima migrate dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -31,8 +32,8 @@
     "date-fns": "^2.29.3",
     "iron-session": "^6.2.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.6.5",
     "next": "12.3.1",
+    "prisma": "^4.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.11.0",
@@ -49,7 +50,6 @@
     "eslint-config-next": "12.3.1",
     "eslint-plugin-react": "^7.31.10",
     "jest": "^29.1.2",
-    "nodemon": "^2.0.20",
     "postcss": "^8.4.17",
     "postcss-preset-env": "^7.8.2",
     "prettier": "2.7.1",
@@ -57,7 +57,6 @@
     "supertest": "^6.3.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
