--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "delay": 2500
   },
   "dependencies": {
-    "@prisma/client": "4.4.0",
-    "@tanstack/react-query": "^4.13.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.8.1",
+    "@tanstack/react-query": "^4.20.0",
     "@tanstack/react-query-devtools": "^4.14.1",
     "@trpc/client": "^10.0.0-proxy-beta.26",
     "@trpc/next": "^10.0.0-proxy-beta.26",
@@ -28,18 +29,20 @@
     "@trpc/server": "^10.0.0-proxy-beta.26",
     "@types/lodash": "^4.14.186",
     "@types/supertest": "^2.0.12",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "iron-session": "^6.2.1",
     "lodash": "^4.17.21",
-    "next": "12.3.1",
-    "prisma": "^4.5.0",
+    "next": "13.1.1",
+    "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.11.0",
-    "zod": "^3.19.1"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.3",
     "@types/react": "18.0.21",
@@ -54,6 +57,7 @@
     "postcss-preset-env": "^7.8.2",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.8.1",
     "supertest": "^6.3.0",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.3",
