--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
-      "@t/*": ["types/*"]
+      "@t/*": ["src/types/*"]
     }
   },
   "ts-node": {
