--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "migrate": "prima migrate dev",
+    "migrate": "dotenv -e .env.development -- prisma migrate dev",
+    "migrate:prod": "dotenv -e .env.production -- prisma migrate deploy",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,47 +15,48 @@
     "@heroicons/react": "^2.0.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.1",
-    "@tanstack/react-query": "^4.20.0",
-    "@tanstack/react-query-devtools": "^4.14.1",
-    "@trpc/client": "^10.0.0-proxy-beta.26",
-    "@trpc/next": "^10.0.0-proxy-beta.26",
-    "@trpc/react-query": "^10.0.0-proxy-beta.26",
-    "@trpc/server": "^10.0.0-proxy-beta.26",
-    "@types/lodash": "^4.14.186",
+    "@tanstack/react-query": "^4.22.0",
+    "@tanstack/react-query-devtools": "^4.22.0",
+    "@trpc/client": "^10.9.0",
+    "@trpc/next": "^10.9.0",
+    "@trpc/react-query": "^10.9.0",
+    "@trpc/server": "^10.9.0",
+    "@types/lodash": "^4.14.191",
     "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
-    "iron-session": "^6.2.1",
+    "iron-session": "^6.3.1",
     "lodash": "^4.17.21",
-    "next": "13.1.1",
+    "next": "13.1.2",
     "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "^1.11.0",
+    "superjson": "^1.12.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.3",
-    "@types/react": "18.0.21",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "12.3.1",
-    "eslint-plugin-react": "^7.31.10",
-    "jest": "^29.1.2",
-    "postcss": "^8.4.17",
-    "postcss-preset-env": "^7.8.2",
-    "prettier": "2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "autoprefixer": "^10.4.13",
+    "dotenv-cli": "^7.0.0",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "13.1.2",
+    "eslint-plugin-react": "^7.32.0",
+    "jest": "^29.3.1",
+    "postcss": "^8.4.21",
+    "postcss-preset-env": "^7.8.3",
+    "prettier": "2.8.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.1",
-    "supertest": "^6.3.0",
-    "tailwindcss": "^3.1.8",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "supertest": "^6.3.3",
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4"
   }
 }
