--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.191",
     "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "iron-session": "^6.3.1",
