--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migrate:prod": "dotenv -e .env.production -- prisma migrate deploy",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "test": "jest --runInBand"
   },
   "dependencies": {
