--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.14",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.1.5",
     "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.23.0",
     "@tanstack/react-query-devtools": "^4.23.0",
