--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@heroicons/react": "^2.0.14",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.5",
@@ -28,6 +30,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "emoji-mart": "^5.5.2",
     "iron-session": "^6.3.1",
     "lodash": "^4.17.21",
     "next": "13.1.5",
