--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.12.2",
+    "uuid": "^9.0.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
