--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "emoji-mart": "^5.5.2",
+    "framer-motion": "^9.0.2",
     "iron-session": "^6.3.1",
     "lodash": "^4.17.21",
     "next": "13.1.5",
