--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use-measure": "^2.1.1",
     "superjson": "^1.12.2",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
