--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "supertest": "^6.3.3",
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "typescript": "4.9.5"
   }
 }
