--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "migrate": "dotenv -e .env.development -- prisma migrate dev",
     "migrate:prod": "dotenv -e .env.production -- prisma migrate deploy",
     "build": "next build",
@@ -15,58 +15,50 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
-    "@floating-ui/react": "^0.24.1",
+    "@floating-ui/react": "^0.25.1",
     "@heroicons/react": "^2.0.18",
-    "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.14.1",
-    "@tanstack/react-query": "^4.29.7",
-    "@tanstack/react-query-devtools": "^4.29.7",
-    "@trpc/client": "^10.27.1",
-    "@trpc/next": "^10.27.1",
-    "@trpc/react-query": "^10.27.1",
-    "@trpc/server": "^10.27.1",
-    "@types/lodash": "^4.14.194",
+    "@lucia-auth/adapter-prisma": "^3.0.1",
+    "@prisma/client": "^5.1.1",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
+    "@types/lodash": "^4.14.197",
     "@types/supertest": "^2.0.12",
-    "bcrypt": "^5.1.0",
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "emoji-mart": "^5.5.2",
-    "framer-motion": "^10.12.12",
-    "iron-session": "^6.3.1",
+    "framer-motion": "^10.16.0",
     "lodash": "^4.17.21",
-    "next": "13.4.3",
-    "next-auth": "^4.22.1",
+    "lucia": "^2.3.0",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-measure": "^2.1.1",
-    "superjson": "^1.12.3",
     "uuid": "^9.0.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.2.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "autoprefixer": "^10.4.14",
-    "dotenv-cli": "^7.2.1",
-    "eslint": "^8.41.0",
-    "eslint-config-next": "13.4.3",
-    "eslint-plugin-react": "^7.32.2",
-    "jest": "^29.5.0",
-    "postcss": "^8.4.23",
-    "postcss-preset-env": "^8.4.1",
-    "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^4.14.1",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.1",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "autoprefixer": "^10.4.15",
+    "dotenv-cli": "^7.3.0",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-plugin-react": "^7.33.2",
+    "jest": "^29.6.2",
+    "postcss": "^8.4.28",
+    "postcss-preset-env": "^9.1.1",
+    "prettier": "3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "prisma": "^5.1.1",
     "supertest": "^6.3.3",
-    "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.1.0",
-    "typescript": "5.0.4"
+    "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "5.1.6"
   }
 }
