--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.0.18",
     "@lucia-auth/adapter-prisma": "^3.0.1",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
@@ -37,6 +38,7 @@
     "lodash": "^4.17.21",
     "lucia": "^2.3.0",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-measure": "^2.1.1",
