--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@lucia-auth/adapter-prisma": "^3.0.1",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
