feat: move to drizzle in progress

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "start": "next start",
     "lint": "next lint --fix",
     "test": "jest --runInBand",
-    "vercel-build": "prisma generate && next build"
+    "vercel-build": "prisma generate && next build",
+    "generate": "dotenv -e .env.development drizzle-kit generate:pg",
+    "push": "dotenv -e .env.development drizzle-kit push:pg"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@floating-ui/react": "^0.25.1",
     "@heroicons/react": "^2.0.18",
+    "@lucia-auth/adapter-postgresql": "^2.0.1",
     "@lucia-auth/adapter-prisma": "^3.0.1",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.4",
@@ -32,12 +35,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "drizzle-orm": "^0.28.6",
     "emoji-regex": "^10.2.1",
     "framer-motion": "^10.16.0",
     "lodash": "^4.17.21",
     "lucia": "^2.3.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
+    "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-measure": "^2.1.1",
@@ -55,7 +60,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "autoprefixer": "^10.4.15",
-    "dotenv-cli": "^7.3.0",
+    "drizzle-kit": "^0.19.13",
     "eslint": "^8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-react": "^7.33.2",
