--- a/package.json
+++ b/package.json
@@ -4,75 +4,69 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "migrate": "dotenv -e .env.development -- prisma migrate dev",
-    "migrate:prod": "dotenv -e .env.production -- prisma migrate deploy",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
     "test": "jest --runInBand",
-    "vercel-build": "prisma generate && next build",
+    "vercel-build": "next build",
     "generate": "dotenv -e .env.development drizzle-kit generate:pg",
     "push": "dotenv -e .env.development drizzle-kit push:pg"
   },
   "dependencies": {
-    "@emoji-mart/data": "^1.1.2",
-    "@emoji-mart/react": "^1.1.1",
-    "@floating-ui/react": "^0.25.1",
+    "@floating-ui/react": "^0.26.0",
     "@heroicons/react": "^2.0.18",
     "@lucia-auth/adapter-postgresql": "^2.0.1",
-    "@lucia-auth/adapter-prisma": "^3.0.1",
-    "@prisma/client": "^5.1.1",
-    "@radix-ui/react-alert-dialog": "^1.0.4",
-    "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@types/lodash": "^4.14.197",
-    "@types/supertest": "^2.0.12",
+    "@types/lodash": "^4.14.199",
+    "@types/supertest": "^2.0.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.6",
     "emoji-regex": "^10.2.1",
-    "framer-motion": "^10.16.0",
+    "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
-    "lucia": "^2.3.0",
-    "next": "13.4.19",
+    "lucia": "^2.7.1",
+    "next": "13.5.4",
     "next-themes": "^0.2.1",
-    "postgres": "^3.3.5",
+    "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
-    "uuid": "^9.0.0",
-    "zod": "^3.22.2"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.5.1",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "autoprefixer": "^10.4.15",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.6",
+    "@types/pg": "^8.10.5",
+    "@types/react": "18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@types/uuid": "^9.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "autoprefixer": "^10.4.16",
     "drizzle-kit": "^0.19.13",
-    "eslint": "^8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "13.5.4",
     "eslint-plugin-react": "^7.33.2",
-    "jest": "^29.6.2",
-    "postcss": "^8.4.28",
-    "postcss-preset-env": "^9.1.1",
-    "prettier": "3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "prisma": "^5.1.1",
+    "jest": "^29.7.0",
+    "postcss": "^8.4.31",
+    "postcss-preset-env": "^9.2.0",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "supertest": "^6.3.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   }
 }
