tests setup, linters, actions, refactors

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix",
-    "test": "jest --runInBand",
+    "lint": "next lint",
+    "prettier": "prettier . --write",
+    "test": "dotenv -e .env.development playwright test",
     "vercel-build": "next build",
     "generate": "dotenv -e .env.development drizzle-kit generate:pg",
     "push": "dotenv -e .env.development drizzle-kit push:pg"
@@ -15,6 +16,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.0",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.3.2",
     "@lucia-auth/adapter-postgresql": "^2.0.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
@@ -24,8 +26,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@types/lodash": "^4.14.199",
-    "@types/supertest": "^2.0.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -39,6 +39,7 @@
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
@@ -46,18 +47,22 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.39.0",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.6",
     "@types/pg": "^8.10.5",
-    "@types/react": "18.2.28",
+    "@types/react": "18.2.20",
     "@types/react-dom": "^18.2.13",
     "@types/uuid": "^9.0.5",
+    "@types/lodash": "^4.14.199",
+    "@types/supertest": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "autoprefixer": "^10.4.16",
     "drizzle-kit": "^0.19.13",
     "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "postcss": "^8.4.31",
