--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,13 @@
     "project": "./tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "prettier"
+  ],
   "rules": {
     "@typescript-eslint/consistent-type-imports": "warn"
   }
