--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,10 +3,12 @@ name: Lint
 on:
   push:
     branches:
-      - [main, dev]
+      - main
+      - dev
   pull_request:
     branches:
-      - [main, dev]
+      - main
+      - dev
 
 jobs:
   run-linters:
