--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "dotenv -e .env.development next start",
     "lint": "next lint",
     "prettier": "prettier . --write",
     "test": "dotenv -e .env.development playwright test",
@@ -34,7 +34,7 @@
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "lucia": "^2.7.1",
-    "next": "13.5.4",
+    "next": "13.5.5",
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "react": "18.2.0",
