--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "dotenv -e .env.development next start",
+    "start": "next start",
+    "start:dev": "dotenv -e .env.development next start",
     "lint": "next lint",
     "prettier": "prettier . --write",
     "test": "dotenv -e .env.development playwright test",
@@ -18,6 +19,7 @@
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@lucia-auth/adapter-postgresql": "^2.0.1",
+    "@next/bundle-analyzer": "^13.5.5",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
@@ -49,16 +51,18 @@
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "@types/jest": "^29.5.5",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.8.6",
     "@types/pg": "^8.10.5",
     "@types/react": "18.2.20",
     "@types/react-dom": "^18.2.13",
-    "@types/uuid": "^9.0.5",
-    "@types/lodash": "^4.14.199",
     "@types/supertest": "^2.0.14",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "drizzle-kit": "^0.19.13",
     "eslint": "^8.51.0",
     "eslint-config-next": "13.5.4",
