fixed docker, redoing color selection

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,7 +12,7 @@ services:
       - NODE_ENV=development
       - PORT=1337
       - DATABASE_URL=postgresql://admin:samplepass@postgres:5432/db?connect_timeout=300
-    command: "./startup.dev.sh"
+    command: "npm run dev:migrate"
     tty: true
   postgres:
     environment:
