deployment and docker improvements

--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -2,22 +2,37 @@ version: "3"
 services:
   node-next:
     build:
-      context: .
+      context: ../../
+      dockerfile: docker/development/Dockerfile
       args:
         NODE_ENV: development
+    ports:
+      - "3000:3000"
     volumes:
-      - ./:/app
+      - ../../:/app
       - /app/node_modules
     environment:
       - NODE_ENV=development
-      - PORT=1337
       - DATABASE_URL=postgresql://admin:samplepass@postgres:5432/db?connect_timeout=300
-    command: "npm run dev:migrate"
     tty: true
+    depends_on:
+      postgres:
+        condition: service_healthy
   postgres:
+    image: postgres:latest
+    restart: always
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=samplepass
       - POSTGRES_DB=db
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "db_prod"]
+      interval: 5s
+      timeout: 60s
+      retries: 20
+      start_period: 5s
+
+volumes:
+  pgdata:
