--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,10 @@
-node_modules
-.git
-.gitignore
 Dockerfile
 .dockerignore
-docker-compose*
-tests
+node_modules
+npm-debug.log
+README.md
+.next
+docker
+.git
+.env.development
+.env.production
