--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@tanstack/react-query": "^5.8.4",
     "@types/chroma-js": "^2.4.3",
     "chroma-js": "^2.4.2",
     "class-variance-authority": "^0.7.0",
@@ -46,6 +47,7 @@
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.0.0",
