--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
