update lucia to v3

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@floating-ui/react": "^0.26.1",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
-    "@lucia-auth/adapter-postgresql": "^2.0.2",
+    "@lucia-auth/adapter-drizzle": "^1.0.0",
     "@next/bundle-analyzer": "^14.0.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
@@ -41,9 +41,10 @@
     "emoji-regex": "^10.3.0",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
-    "lucia": "^2.7.3",
+    "lucia": "^3.0.1",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "oslo": "^1.0.3",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
