--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@lucia-auth/adapter-drizzle": "^1.0.0",
     "@next/bundle-analyzer": "^14.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -47,14 +48,15 @@
     "oslo": "^1.0.3",
     "pg": "^8.11.3",
     "react": "18.2.0",
-    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.49.3",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.12.1",
     "uuid": "^9.0.1",
+    "vaul": "^0.8.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
