--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "migrate:env": "dotenv -e .env.development npm run migrate",
     "vercel:build": "npm run migrate && npm run build",
     "docker:push": "drizzle-kit push:pg",
-    "docker:push:dev": "npm run docker:push && npm run dev"
+    "docker:push:dev": "npm run docker:push && npm run dev",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.9",
@@ -80,6 +81,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.0",
     "jest": "^29.7.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.35",
     "postcss-preset-env": "^9.5.0",
     "prettier": "3.2.5",
