--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.27.5",
     "@types/chroma-js": "^2.4.4",
     "chroma-js": "^2.4.2",
