--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "chroma-js": "^2.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.4.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.1",
     "drizzle-orm": "^0.30.1",
     "emoji-regex": "^10.3.0",
     "framer-motion": "^11.0.12",
@@ -57,6 +58,7 @@
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "timezones-list": "^3.0.3",
     "usehooks-ts": "^3.0.1",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
