--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tanstack/react-query": "^5.28.9",
     "@types/chroma-js": "^2.4.4",
     "@visx/visx": "^3.10.2",
+    "@yornaath/batshit": "^0.9.0",
     "chroma-js": "^2.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
