--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "migrate": "npx --yes tsx ./src/app/api/migrate.ts",
     "migrate:env": "dotenv -e .env.development npm run migrate",
     "vercel:build": "npm run migrate && npm run build",
-    "docker:push": "drizzle-kit push:pg",
-    "docker:push:dev": "npm run docker:push && npm run dev",
+    "migrate:dev": "npm run migrate && npm run dev",
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.10",
+    "@floating-ui/react": "^0.26.11",
     "@heroicons/react": "^2.1.3",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@next/bundle-analyzer": "^14.1.4",
+    "@node-rs/argon2": "^1.8.0",
+    "@node-rs/bcrypt": "^1.10.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
@@ -34,7 +35,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-query": "^5.29.0",
     "@types/chroma-js": "^2.4.4",
     "@visx/visx": "^3.10.2",
     "@yornaath/batshit": "^0.9.0",
@@ -45,37 +46,37 @@
     "date-fns-tz": "^2.0.1",
     "drizzle-orm": "^0.30.6",
     "emoji-regex": "^10.3.0",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.0.25",
     "lodash": "^4.17.21",
     "lucia": "^3.1.1",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "oslo": "^1.2.0",
-    "pg": "^8.11.4",
+    "pg": "^8.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.13",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
-    "usehooks-ts": "^3.0.2",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.42.1",
-    "@tanstack/react-query-devtools": "^5.28.10",
+    "@playwright/test": "^1.43.0",
+    "@tanstack/react-query-devtools": "^5.29.0",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.0",
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.12.5",
     "@types/pg": "^8.11.4",
-    "@types/react": "18.2.73",
-    "@types/react-dom": "^18.2.23",
+    "@types/react": "18.2.74",
+    "@types/react-dom": "^18.2.24",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
@@ -87,11 +88,11 @@
     "jest": "^29.7.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.38",
-    "postcss-preset-env": "^9.5.3",
+    "postcss-preset-env": "^9.5.4",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.3",
     "ts-jest": "^29.1.2",
-    "typescript": "5.4.3"
+    "typescript": "5.4.4"
   }
 }
