--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "dotenv -e .env.development playwright test --headed",
     "generate": "dotenv -e .env.development drizzle-kit generate:pg",
     "push": "dotenv -e .env.development drizzle-kit push:pg",
-    "migrate": "npx --yes tsx ./src/app/api/migrate.ts",
+    "migrate": "npx --yes tsx ./src/db/migrate.ts",
     "migrate:env": "dotenv -e .env.development npm run migrate",
     "vercel:build": "npm run migrate && npm run build",
     "migrate:dev": "npm run migrate && npm run dev",
@@ -39,6 +39,7 @@
     "@types/chroma-js": "^2.4.4",
     "@visx/visx": "^3.10.2",
     "@yornaath/batshit": "^0.9.0",
+    "arctic": "^1.5.0",
     "chroma-js": "^2.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
