fix env, trying to fix css

--- a/apps/next/tsconfig.json
+++ b/apps/next/tsconfig.json
@@ -11,6 +11,6 @@
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
     "module": "esnext"
   },
-  "include": [".", ".next/types/**/*.ts", "../../packages/validators/src/user.ts", "../../packages/validators/src/trackable.ts", "../../packages/validators/src/helpers.ts"],
+  "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
