--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -4,18 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "start:dev": "dotenv -e .env.development next start",
+    "dev": "pnpm with-env next dev",
+    "build": "pnpm with-env next build",
+    "start": "pnpm with-env next start",
     "lint": "next lint",
-    "test": "dotenv -e .env.development playwright test --headed",
-    "generate": "dotenv -e .env.development drizzle-kit generate:pg",
-    "push": "dotenv -e .env.development drizzle-kit push:pg",
-    "migrate": "npx --yes tsx ./src/db/migrate.ts",
-    "migrate:env": "dotenv -e .env.development npm run migrate",
-    "vercel:build": "npm run migrate && npm run build",
-    "migrate:dev": "npm run migrate && npm run dev"
+    "test": "pnpm with-env playwright test --headed",
+    "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@tyl/api": "workspace:*",
@@ -24,6 +18,7 @@
     "@tyl/ui": "workspace:*",
     "@tyl/validators": "workspace:*",
     "@floating-ui/react": "^0.26.16",
+    "@radix-ui/react-icons": "^1.3.0",
     "@heroicons/react": "^2.1.3",
     "@node-rs/argon2": "^1.8.3",
     "@node-rs/bcrypt": "^1.10.4",
@@ -75,15 +70,14 @@
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
-    "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jiti": "^1.21.0",
     "postcss": "^8.4.38",
     "postcss-preset-env": "^9.5.14",
     "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.3",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
-  }
+  },
+  "prettier": "@tyl/prettier-config"
 }
