--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -6,8 +6,8 @@
   "tailwind": {
     "config": "./tailwind.config.ts",
     "css": "unused.css",
-    "baseColor": "zinc",
-    "cssVariables": true
+    "baseColor": "neutral",
+    "cssVariables": false
   },
   "aliases": {
     "utils": "@tyl/ui",
