--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./native": "./native.ts",
-    "./web": "./web.ts"
+    ".": "./index.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -17,7 +16,8 @@
   "dependencies": {
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@tailwindcss/container-queries": "^0.1.1"
   },
   "devDependencies": {
     "@tyl/eslint-config": "workspace:*",
