--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-/test-results/
-/playwright-report/
-/playwright/.cache/
+test-results/
+playwright-report
+playwright/.cache
