--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -17,6 +17,9 @@
     "@tyl/db": "workspace:*",
     "@tyl/ui": "workspace:*",
     "@tyl/validators": "workspace:*",
+    "@trpc/client": "11.0.0-rc.403",
+    "@trpc/react-query": "11.0.0-rc.403",
+    "@trpc/server": "11.0.0-rc.403",
     "@floating-ui/react": "^0.26.16",
     "@radix-ui/react-icons": "^1.3.0",
     "@heroicons/react": "^2.1.3",
@@ -45,6 +48,7 @@
     "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
     "usehooks-ts": "^3.1.0",
+    "superjson": "2.2.1",
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
