--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,6 +24,9 @@
     "@tyl/validators": "workspace:*",
     "@trpc/server": "11.0.0-rc.403",
     "superjson": "2.2.1",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
+    "timezones-list": "^3.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
