--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -4,30 +4,32 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm with-env next dev",
-    "build": "pnpm with-env next build",
-    "start": "pnpm with-env next start",
-    "lint": "next lint",
-    "test": "pnpm with-env playwright test --headed",
-    "with-env": "dotenv -e ../../.env --"
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.16",
+    "@heroicons/react": "^2.1.3",
+    "@node-rs/argon2": "^1.8.3",
+    "@node-rs/bcrypt": "^1.10.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/react-query": "^5.44.0",
+    "@tanstack/react-router": "^1.45.10",
+    "@tanstack/router-devtools": "^1.45.10",
+    "@tanstack/start": "^1.45.10",
+    "@trpc/client": "11.0.0-rc.403",
+    "@trpc/react-query": "11.0.0-rc.403",
+    "@trpc/server": "11.0.0-rc.403",
     "@tyl/api": "workspace:*",
     "@tyl/auth": "workspace:*",
     "@tyl/db": "workspace:*",
     "@tyl/ui": "workspace:*",
     "@tyl/validators": "workspace:*",
-    "@trpc/client": "11.0.0-rc.403",
-    "@trpc/react-query": "11.0.0-rc.403",
-    "@trpc/server": "11.0.0-rc.403",
-    "@floating-ui/react": "^0.26.16",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@heroicons/react": "^2.1.3",
-    "@node-rs/argon2": "^1.8.3",
-    "@node-rs/bcrypt": "^1.10.4",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/react-query": "^5.44.0",
+    "@vinxi/plugin-references": "0.0.29",
     "@visx/visx": "^3.11.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "@yornaath/batshit": "^0.10.1",
     "arctic": "^1.9.1",
     "chroma-js": "^2.4.2",
@@ -39,29 +41,28 @@
     "emoji-regex": "^10.3.0",
     "framer-motion": "^11.2.10",
     "lodash": "^4.17.21",
-    "next": "^14.2.4",
-    "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^4.0.13",
+    "superjson": "2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
     "usehooks-ts": "^3.1.0",
-    "superjson": "2.2.1",
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
+    "vinxi": "0.4.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/chroma-js": "^2.4.4",
+    "@playwright/test": "^1.44.1",
+    "@tanstack/react-query-devtools": "^5.44.0",
     "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@next/bundle-analyzer": "^14.2.3",
-    "@playwright/test": "^1.44.1",
-    "@tanstack/react-query-devtools": "^5.44.0",
+    "@types/chroma-js": "^2.4.4",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20.14.2",
