--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,13 +24,14 @@
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
+    "generate": "pnpm with-env drizzle-kit generate",
+    "migrate": "pnpm with-env drizzle-kit migrate",
     "push": "pnpm with-env drizzle-kit push",
     "studio": "pnpm with-env drizzle-kit studio",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    
     "@t3-oss/env-core": "^0.10.1",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
