--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ test-results/
 playwright-report
 playwright/.cache
 dist
+
+# expo
+.expo/
+expo-env.d.ts
+apps/expo/.gitignore
+apps/expo/ios
+apps/expo/android
+apps/expo/.cache
