--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -2,9 +2,9 @@
   "name": "@tyl/expo",
   "version": "0.1.0",
   "private": true,
-  "main": "expo-router/entry",
+  "main": "index.ts",
   "scripts": {
-    "clean": "git clean -xdf .expo .turbo node_modules",
+    "clean": "git clean -xdf .cache .expo .turbo android ios node_modules",
     "dev": "expo start",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
@@ -16,44 +16,48 @@
   },
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
-    "@expo/metro-config": "^0.18.3",
-    "@shopify/flash-list": "1.7.1",
-    "@tanstack/react-query": "^5.51.24",
-    "@trpc/client": "11.0.0-rc.403",
-    "@trpc/react-query": "11.0.0-rc.403",
-    "@trpc/server": "11.0.0-rc.403",
-    "expo": "~51.0.2",
-    "expo-constants": "~16.0.1",
-    "expo-dev-client": "~4.0.13",
+    "@expo/metro-config": "^0.18.11",
+    "@shopify/flash-list": "1.6.4",
+    "@tanstack/react-query": "catalog:",
+    "@trpc/client": "catalog:",
+    "@trpc/react-query": "catalog:",
+    "@trpc/server": "catalog:",
+    "class-variance-authority": "^0.7.0",
+    "expo": "~51.0.27",
+    "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.23",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.11",
-    "expo-secure-store": "^13.0.1",
-    "expo-splash-screen": "~0.27.4",
+    "expo-router": "~3.5.21",
+    "expo-secure-store": "^13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "~0.74.1",
+    "nativewind": "~4.0.36",
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18",
+    "react-native": "~0.74.5",
     "react-native-css-interop": "~0.0.34",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "~4.10.1",
+    "react-native-safe-area-context": "~4.10.8",
     "react-native-screens": "~3.31.1",
-    "superjson": "2.2.1"
+    "superjson": "2.2.1",
+    "zod": "catalog:"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
     "@tyl/api": "workspace:*",
     "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
     "@types/babel__core": "^7.20.5",
-    "@types/react": "^18.3.3",
-    "eslint": "^8.57.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "@types/react": "catalog:react18",
+    "eslint": "catalog:",
+    "prettier": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   },
   "prettier": "@tyl/prettier-config"
 }
