--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -19,10 +19,10 @@
     "@node-rs/bcrypt": "^1.10.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/react-query": "^5.51.24",
-    "@trpc/client": "11.0.0-rc.403",
-    "@trpc/react-query": "11.0.0-rc.403",
-    "@trpc/server": "11.0.0-rc.403",
+    "@tanstack/react-query": "catalog:",
+    "@trpc/client": "catalog:",
+    "@trpc/react-query": "catalog:",
+    "@trpc/server": "catalog:",
     "@tyl/api": "workspace:*",
     "@tyl/auth": "workspace:*",
     "@tyl/db": "workspace:*",
@@ -43,8 +43,8 @@
     "lucia": "^3.2.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "catalog:react18",
+    "react-dom": "catalog:react18",
     "react-error-boundary": "^4.0.13",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.5.2",
@@ -52,7 +52,7 @@
     "timezones-list": "^3.0.3",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.5",
@@ -79,10 +79,11 @@
     "jiti": "^1.21.6",
     "postcss": "^8.4.41",
     "postcss-preset-env": "^10.0.2",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.10",
     "ts-jest": "^29.2.4",
-    "typescript": "^5.5.4"
+    "eslint": "catalog:",
+    "prettier": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   },
   "prettier": "@tyl/prettier-config"
 }
