--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -27,7 +27,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "timezones-list": "^3.0.3",
-    "zod": "^3.23.8"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@tyl/eslint-config": "workspace:*",
