--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
-    "zod": "^3.23.8"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@tyl/eslint-config": "workspace:*",
@@ -43,10 +43,10 @@
     "@types/pg": "^8.11.6",
     "dotenv-cli": "^7.4.2",
     "drizzle-kit": "^0.24.0",
-    "eslint": "^8.57.0",
     "pg": "^8.12.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
+    "eslint": "catalog:",
+    "prettier": "catalog:",
+    "typescript": "catalog:"
   },
   "prettier": "@tyl/prettier-config"
 }
