--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,6 @@
     "ui-add": "pnpm dlx shadcn-ui add && prettier src --write --list-different"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -43,17 +42,17 @@
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@types/react": "^18.3.3",
-    "eslint": "^8.57.0",
-    "prettier": "^3.3.3",
-    "react": "18.3.1",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4",
-    "zod": "^3.23.8"
+    "@types/react": "catalog:react18",
+    "eslint": "catalog:",
+    "prettier": "catalog:",
+    "react": "catalog:react18",
+    "typescript": "catalog:",
+    "zod": "catalog:",
+    "tailwindcss": "catalog:"
   },
   "peerDependencies": {
-    "react": "18.3.1",
-    "zod": "^3.23.8"
+    "react": "catalog:react18",
+    "zod": "catalog:"
   },
   "prettier": "@tyl/prettier-config"
 }
