--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -28,10 +28,14 @@
     "@tyl/validators": "workspace:*",
     "babel-plugin-inline-import": "^3.0.0",
     "class-variance-authority": "^0.7.0",
+    "date-fns": "catalog:",
+    "date-fns-tz": "catalog:",
     "drizzle-orm": "^0.33.0",
     "expo": "~51.0.30",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.23",
+    "expo-drizzle-studio-plugin": "^0.0.2",
+    "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
     "expo-secure-store": "^13.0.2",
@@ -39,7 +43,7 @@
     "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
-    "nativewind": "~4.0.36",
+    "radix-ui-react-native-icons": "^1.1.0",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
     "react-native": "~0.74.5",
@@ -48,8 +52,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "~4.10.8",
     "react-native-screens": "~3.31.1",
-    "expo-drizzle-studio-plugin": "^0.0.2",
+    "react-native-svg": "15.2.0",
     "superjson": "2.2.1",
+    "twrnc": "^4.5.1",
     "zod": "catalog:"
   },
   "devDependencies": {
