--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,8 +25,8 @@
     "@tyl/helpers": "workspace:*",
     "@trpc/server": "11.0.0-rc.403",
     "superjson": "2.2.1",
-    "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.1.3",
+    "date-fns": "catalog:",
+    "date-fns-tz": "catalog:",
     "timezones-list": "^3.0.3",
     "zod": "catalog:"
   },
