--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,8 @@ catalog:
   "@trpc/client": ^11.0.0-rc.477
   "@trpc/react-query": ^11.0.0-rc.477
   "@trpc/server": ^11.0.0-rc.477
+  "date-fns": "^3.6.0"
+  "date-fns-tz": "^3.1.3"
   eslint: ^8.57.0
   prettier: ^3.3.3
   tailwindcss: ^3.4.10
