--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
   },
-  "include": ["src", "*.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
