--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "ui-add": "turbo run ui-add"
   },
   "devDependencies": {
+    "@turbo/gen": "2.1.2",
     "@tyl/prettier-config": "workspace:*",
-    "@turbo/gen": "^2.0.15-canary.2",
     "prettier": "^3.3.3",
-    "turbo": "2.0.15-canary.2",
+    "turbo": "2.1.2",
     "typescript": "^5.5.4"
   },
   "prettier": "@tyl/prettier-config"
