--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -21,24 +21,24 @@
   "dependencies": {
     "@tyl/validators": "workspace:*",
     "chroma-js": "^3.0.0",
-    "lodash-es": "^4.17.21",
     "date-fns": "catalog:",
-    "date-fns-tz": "catalog:"
+    "date-fns-tz": "catalog:",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@types/react": "catalog:react18",
-    "@types/lodash-es": "^4.17.12",
     "@types/chroma-js": "^2.4.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/react": "catalog:react18",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "react": "catalog:react18",
+    "tailwindcss": "catalog:",
     "typescript": "catalog:",
-    "zod": "catalog:",
-    "tailwindcss": "catalog:"
+    "zod": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:react18",
