--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": ">=20.12.0"
   },
-  "packageManager": "pnpm@9.7.1",
+  "packageManager": "pnpm@9.14.2",
   "scripts": {
     "build": "turbo run build",
     "clean": "git clean -xdf node_modules",
@@ -25,11 +25,11 @@
     "ui-add": "turbo run ui-add"
   },
   "devDependencies": {
+    "@turbo/gen": "^2.3.1",
     "@tyl/prettier-config": "workspace:*",
-    "@turbo/gen": "^2.0.15-canary.2",
     "prettier": "^3.3.3",
-    "turbo": "2.0.15-canary.2",
-    "typescript": "^5.5.4"
+    "turbo": "2.3.1",
+    "typescript": "catalog:"
   },
   "prettier": "@tyl/prettier-config"
 }
