--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -17,11 +17,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@tyl/db": "workspace:*",
     "@lucia-auth/adapter-drizzle": "^1.1.0",
-    "lucia": "^3.2.0",
-    "oslo": "^1.2.1",
+    "@tyl/db": "workspace:*",
+    "lucia": "^3.2.2",
     "next": "^14.2.5",
+    "oslo": "^1.2.1",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
     "zod": "catalog:"
@@ -30,7 +30,7 @@
     "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@types/react": "^18.3.3",
+    "@types/react": "catalog:react18",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
