--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,12 +22,11 @@
     "@tanstack/router-plugin": "^1.81.9",
     "@tanstack/start": "^1.82.9",
     "@trpc/client": "catalog:",
-    "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
     "@tyl/api": "workspace:*",
     "@tyl/db": "workspace:*",
     "@tyl/helpers": "workspace:*",
-    "@tyl/ui": "workspace:*",
+    "~/@shad": "workspace:*",
     "@tyl/validators": "workspace:*",
     "@visx/visx": "^3.12.0",
     "@vitejs/plugin-react": "^4.3.3",
