--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,9 +5,8 @@ packages:
 
 catalog:
   "@tanstack/react-query": ^5.61.3
-  "@trpc/client": ^11.0.0-rc.645
-  "@trpc/react-query": ^11.0.0-rc.645
-  "@trpc/server": ^11.0.0-rc.645
+  "@trpc/client": 11.0.0-rc.645
+  "@trpc/server": 11.0.0-rc.645
   "date-fns": "^3.6.0"
   "date-fns-tz": "^3.1.3"
   eslint: ^8.57.0
