--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,17 @@
     "@heroicons/react": "^2.2.0",
     "@node-rs/argon2": "^2.0.0",
     "@node-rs/bcrypt": "^1.10.5",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "catalog:",
     "@tanstack/react-router": "^1.82.8",
     "@tanstack/react-router-with-query": "^1.82.8",
@@ -22,6 +32,7 @@
     "@tanstack/router-plugin": "^1.81.9",
     "@tanstack/start": "^1.82.9",
     "@trpc/client": "catalog:",
+    "@trpc/react-query": "^11.0.0-rc.648",
     "@trpc/server": "catalog:",
     "@tyl/api": "workspace:*",
     "@tyl/db": "workspace:*",
@@ -39,15 +50,19 @@
     "emoji-regex": "^10.4.0",
     "framer-motion": "^11.11.17",
     "lucia": "^3.2.2",
+    "next-themes": "^0.3.0",
+    "oslo": "^1.2.1",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
     "react-error-boundary": "^4.1.2",
+    "sonner": "^1.5.0",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0",
+    "vaul": "^0.9.1",
     "vinxi": "0.4.3",
     "zod": "catalog:"
   },
