fix slow intellisense

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "tailwindCSS.experimental.classRegex": [
     "tw`([^`]*)",
     ["tw.style\\(([^)]*)\\)", "'([^']*)'"]
-  ]
+  ],
+  "typescript.preferences.includePackageJsonAutoImports": "on"
 }
