restore eslint and fix all issues

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,6 +7,7 @@
     "dev": "pnpm with-env vinxi dev --port 3001",
     "build": "pnpm with-env vinxi build",
     "start": "pnpm with-env vinxi start",
+    "lint": "eslint .",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
@@ -70,21 +71,18 @@
     "@playwright/test": "^1.49.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query-devtools": "^5.61.3",
+    "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.3",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
-    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.4",
-    "jest": "^29.7.0",
-    "jiti": "^2.4.0",
     "postcss": "^8.4.49",
     "postcss-preset-env": "^10.1.1",
     "prettier": "catalog:",
