--- a/apps/server/turbo.json
+++ b/apps/server/turbo.json
@@ -1,7 +1,18 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "extends": ["//"],
+  "extends": [
+    "//"
+  ],
   "tasks": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        ".vinxi/**",
+        ".output/**"
+      ]
+    },
     "dev": {
       "persistent": true,
       "interactive": true
