--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -5,26 +5,26 @@
   "type": "module",
   "exports": {
     "./base": "./base.js",
-    "./nextjs": "./nextjs.js",
     "./react": "./react.js"
   },
   "scripts": {
-    "clean": "rm -rf .turbo node_modules",
+    "clean": "git clean -xdf .cache .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^14.2.5",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.35.0",
+    "@eslint/compat": "^1.2.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "rc",
-    "eslint-plugin-turbo": "^2.0.14",
-    "typescript-eslint": "rc-v8"
+    "eslint-plugin-turbo": "^2.3.3",
+    "typescript-eslint": "^8.15.0"
   },
   "devDependencies": {
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
+    "@types/eslint__js": "8.42.3",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "typescript": "catalog:"
