more linter fixes

--- a/turbo.json
+++ b/turbo.json
@@ -67,9 +67,11 @@
   },
   "globalEnv": [
     "DATABASE_URL",
-    "TEST_ENV"
+    "TEST_ENV",
+    "MIGRATE"
   ],
   "globalPassThroughEnv": [
+    "MIGRATE",
     "NODE_ENV",
     "CI",
     "VERCEL",
