--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -23,7 +23,7 @@
     "dev": "tsc --watch",
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint",
+    "lint": "eslint .",
     "generate": "pnpm with-env drizzle-kit generate",
     "up": "pnpm with-env drizzle-kit up",
     "migrate": "pnpm with-env drizzle-kit migrate",
