--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ RUN npm install -g turbo@^2
 COPY . .
  
 # Generate a partial monorepo with a pruned lockfile for a target workspace.
-RUN turbo prune @tyl/nextjs --docker
+RUN turbo prune @tyl/web --docker
  
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
@@ -28,27 +28,22 @@ RUN pnpm install
  
 # Build the project
 COPY --from=builder /app/out/full/ .
-RUN pnpm turbo run build --filter=@tyl/nextjs...
+RUN pnpm turbo run build --filter=@tyl/web...
  
 FROM base AS runner
 WORKDIR /app
 
 # Don't run production as root
 RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-USER nextjs
+RUN adduser --system --uid 1001 tylrunner
+USER tylrunner
  
-COPY --from=installer /app/apps/next/next.config.js .
-COPY --from=installer /app/apps/next/package.json .
+COPY --from=installer /app/apps/server/package.json .
  
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=installer --chown=nextjs:nodejs /app/apps/next/.next/standalone ./
-COPY --from=installer --chown=nextjs:nodejs /app/apps/next/.next/static ./apps/next/.next/static
-COPY --from=installer --chown=nextjs:nodejs /app/apps/next/public ./apps/next/public
-
-# Copy drizzle folder
-# It will run migration on statup
-COPY --chown=nextjs:nodejs /packages/db/drizzle  apps/next/drizzle
+# Copy app build
+COPY --from=installer --chown=tylrunner:nodejs /app/apps/server/.output ./output
+COPY --from=installer --chown=tylrunner:nodejs /app/apps/server/.vinxi ./vinxi
+# Copy drizzle folder. It will run migration on statup
+COPY --chown=tylrunner:nodejs /packages/db/drizzle  ./drizzle
  
-CMD node apps/next/server.js
+CMD ["node", "./output/server/index.mjs"]
