restore public folder, fix err page and not found design

--- a/turbo.json
+++ b/turbo.json
@@ -68,7 +68,8 @@
   "globalEnv": [
     "DATABASE_URL",
     "TEST_ENV",
-    "MIGRATE"
+    "MIGRATE",
+    "SITE"
   ],
   "globalPassThroughEnv": [
     "MIGRATE",
