--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "build": "turbo run build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
-    "db:push": "turbo -F @tyl/db push",
-    "db:studio": "turbo -F @tyl/db studio",
-    "db:gen": "turbo -F @tyl/db gen",
+    "db:studio": "turbo run studio -F @tyl/db",
+    "db:generate": "turbo run generate -F @tyl/db",
     "dev": "turbo watch dev",
-    "dev:next": "turbo watch dev -F @tyl/nextjs...",
     "format": "turbo run format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
     "lint": "turbo run lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
