--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -31,9 +31,8 @@
     "@tyl/helpers": "workspace:*",
     "@tyl/validators": "workspace:*",
     "babel-plugin-inline-import": "^3.0.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "catalog:",
     "date-fns": "catalog:",
-    "date-fns-tz": "catalog:",
     "drizzle-orm": "^0.36.4",
     "expo": "~51.0.30",
     "expo-constants": "~16.0.2",
