--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,23 +15,23 @@
     "@heroicons/react": "^2.2.0",
     "@node-rs/argon2": "^2.0.0",
     "@node-rs/bcrypt": "^1.10.5",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-query": "catalog:",
-    "@tanstack/react-router": "^1.82.8",
-    "@tanstack/react-router-with-query": "^1.82.8",
-    "@tanstack/router-devtools": "^1.82.8",
-    "@tanstack/router-plugin": "^1.81.9",
-    "@tanstack/start": "^1.82.9",
+    "@tanstack/react-router": "^1.85.0",
+    "@tanstack/react-router-with-query": "^1.85.0",
+    "@tanstack/router-devtools": "^1.85.0",
+    "@tanstack/router-plugin": "^1.84.4",
+    "@tanstack/start": "^1.85.0",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@tyl/api": "workspace:*",
@@ -39,46 +39,44 @@
     "@tyl/helpers": "workspace:*",
     "@tyl/validators": "workspace:*",
     "@visx/visx": "^3.12.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "@yornaath/batshit": "^0.10.1",
     "arctic": "^2.3.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "catalog:",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.1.3",
+    "date-fns": "catalog:",
     "drizzle-orm": "^0.36.4",
     "emoji-regex": "^10.4.0",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "lucia": "^3.2.2",
     "next-themes": "^0.4.3",
     "oslo": "^1.2.1",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
     "react-error-boundary": "^4.1.2",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.0",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
     "usehooks-ts": "^3.1.0",
-    "uuid": "^10.0.0",
-    "vaul": "^0.9.1",
+    "uuid": "^11.0.3",
+    "vaul": "^1.1.1",
     "vinxi": "0.4.3",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/react-query-devtools": "^5.61.3",
+    "@tanstack/react-query-devtools": "^5.62.0",
     "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@types/node": "^22.9.3",
+    "@types/node": "^22.10.1",
     "@types/react": "catalog:react18",
     "@types/react-dom": "catalog:react18",
-    "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.4",
