--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,15 +4,17 @@ packages:
   - tooling/*
 
 catalog:
-  "@tanstack/react-query": ^5.61.3
+  "@tanstack/react-query": ^5.62.0
   "@trpc/client": 11.0.0-rc.621
   "@trpc/server": 11.0.0-rc.621
-  "date-fns": "^3.6.0"
-  "date-fns-tz": "^3.1.3"
+  "date-fns": ^4.1.0
+  "@date-fns/tz": ^1.2.0
+  "class-variance-authority": ^0.7.1
   eslint: ^9.12.0
   prettier: ^3.3.3
-  tailwindcss: ^3.4.10
+  tailwindcss: ^3.4.15
   typescript: ^5.5.4
+  uuid: ^11.0.3
   zod: ^3.23.8
 
 catalogs:
