--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@turbo/gen": "^2.3.1",
     "@tyl/prettier-config": "workspace:*",
-    "prettier": "^3.3.3",
+    "prettier": "catalog:",
     "turbo": "2.3.1",
     "typescript": "catalog:"
   },
