--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,7 +9,7 @@ catalog:
   "@trpc/server": 11.0.0-rc.621
   "date-fns": ^4.1.0
   "@date-fns/tz": ^1.2.0
-  "class-variance-authority": ^0.7.1
+  "class-variance-authority": "0.7.1"
   eslint: ^9.12.0
   prettier: ^3.3.3
   tailwindcss: ^3.4.15
