--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "pnpm with-env vinxi dev --port 3001",
+    "dev": "pnpm with-env vinxi dev",
     "build": "pnpm with-env vinxi build",
     "start": "pnpm with-env vinxi start",
     "lint": "eslint .",
@@ -12,20 +12,20 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.28",
-    "@heroicons/react": "^2.2.0",
     "@node-rs/argon2": "^2.0.0",
     "@node-rs/bcrypt": "^1.10.5",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "catalog:",
     "@tanstack/react-router": "^1.85.0",
     "@tanstack/react-router-with-query": "^1.85.0",
@@ -48,6 +48,7 @@
     "emoji-regex": "^10.4.0",
     "framer-motion": "^11.12.0",
     "lucia": "^3.2.2",
+    "lucide-react": "^0.462.0",
     "next-themes": "^0.4.3",
     "oslo": "^1.2.1",
     "react": "catalog:react18",
